# RobotFightingGame

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  Robot.cpp  configure.in  robotFightingGame  test.egg
Models/: arm.egg  body.egg  missile.egg  robotarm.egg  robotbody.blend  robotbody.egg  robotfull.egg  robothead.egg  robotleg.egg  skybox.egg
Models/Blender Files/: missile.blend  missile.blend1  missile.blend2  missile.egg  robotarm.blend  robotarm.blend1  robotbody.blend  robothead.blend  robothead.blend1  robothead.blend2  robotleg.blend  robotleg.blend1  robotleg.blend2  skybox.blend  skybox.blend1  skybox.blend2
Source/: AI.py  Arm.py  Body.py  BodyPart.h  BodyPart.py  Bullet.py  CreateEquipment.py  Equipment.h  Equipment.py  Head.h  Head.py  Leg.py  Player.py  Robot.cpp  Robot.h  Robot.py  RobotLimbExample.py  StandardFunctions.py  main.cpp  main.py
