#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_PREREQ(2.61)
AC_INIT(Racing, 0.0.1)

AC_CANONICAL_TARGET 

AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SRCDIR([Source/main.cpp])
AC_CONFIG_HEADER([config.h])


# Checks for programs.
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CC
AC_LANG(C++)

if test "$ac_cv_prog_cxx_g" == no
then 
	AC_MSG_ERROR([No C++ compiler detected])
fi

# Check for Opengl.

case "$target" in
*-*-linux* | *-*-cygwin* | *-*-mingw32*)
	 
	AC_CHECK_HEADERS(GL/gl.h GL/glu.h GL/glext.h GL/glut.h, ,
        	[have_gl_headers=no],
	       [[#ifdef WIN32
        	#include <windows.h>
		#endif
		#include <GL/gl.h>
		#include <GL/glut.h>
		#endif
		]])
	have_gl=no
	have_glu=no
	have_glut=no
	AC_CHECK_LIB(GL, main, [LIBS="$LIBS -lGL"; have_gl=yes])
	AC_CHECK_LIB(GLU, main, [LIBS="$LIBS -lGLU"; have_glu=yes], , -lGL)
	AC_CHECK_LIB(GLUT, main, [LIBS="$LIBS -lGLUT -LGLU"; have_glut=yes], ,-lGLUT)

	if test $have_gl_headers = no -o $have_gl = no -o $have_glu = no -o $have_glut = no; then
		AC_MSG_ERROR([Opengl not found])
	fi
esac
case "$target" in
	*-apple-darwin*)

	CFLAGS="$CFLAGS -DCOMP_GCC  -I/System/Library/Frameworks/OpenGL.framework/Headers -I/System/Library/Frameworks/GLUT.framework/Headers"
	LIBS="$LIBS -framework OpenGL -framework GLUT"

esac


#dnl Check for SDL
#SDL_VERSION=1.2.10

#case "$target" in
#*-*-linux* | *-*-cygwin* | *-*-mingw32* | *-*-freebsd*)
#AM_PATH_SDL($SDL_VERSION, :, AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
#CFLAGS="$CFLAGS $SDL_CFLAGS -DCOMP_GCC"
#LIBS="$LIBS $SDL_LIBS"
#esac
#case "$target" in
#*-apple-darwin*)
#CFLAGS="$CFLAGS -DCOMP_GCC -I/Developer/Library/Frameworks/SDL.Framework/Headers -I/#System/Library/Frameworks/OpenGL.framework/Headers"
#LIBS="$LIBS -framework SDL -framework OpenGL -framework Cocoa SDLMain.m"
#esac
#
#dnl Check for SDL_image
#case "$target" in
#*-*-linux* | *-*-cygwin* | *-*-mingw32* | *-*-freebsd*)
#PKG_CHECK_MODULES([SDL_image], [SDL_image >= 1.2.10])
#CFLAGS="$CFLAGS $SDL_image_CFLAGS"
#LIBS="$LIBS $SDL_image_LIBS"
#esac
#case "$target" in
#*-apple-darwin*)
#CFLAGS="$CFLAGS -I/Developer/Library/Frameworks/SDL_image.Framework/Headers"
#LIBS="$LIBS -framework SDL_image"
#esac

#dnl Check for SDL_mixer
#case "$target" in
#*-*-linux* | *-*-cygwin* | *-*-mingw32* | *-*-freebsd*)
#PKG_CHECK_MODULES([SDL_mixer], [SDL_mixer >= 1.2.11])
#CFLAGS="$CFLAGS $SDL_mixer_CFLAGS"
#LIBS="$LIBS $SDL_mixer_LIBS"
#esac
#case "$target" in
#*-apple-darwin*)
#CFLAGS="$CFLAGS -I/Library/Frameworks/SDL_mixer.Framework/Headers"
#LIBS="$LIBS -framework SDL_mixer"
#esac


# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDBOOL

# Checks for library functions.
AC_FUNC_MALLOC

case "$target" in
*-*-mingw32*)
LIBS="$LIBS -lopengl32"
;;
esac

case "$target" in
*-*-linux* | *-*-freebsd*)
CFLAGS="$CFLAGS -DUNIX -I/usr/include/GL"
LIBS="$LIBS -lGL -lGLU -lz"
;;
esac

case "$target" in
*-apple-darwin*)
CFLAGS="$CFLAGS -DDARWIN"
LIBS="$LIBS"
;;
esac

CFLAGS="$CFLAGS -Wall"
CXXFLAGS="$CFLAGS"


AC_OUTPUT
